--- a/layouts/partials/extend-footer.html
+++ b/layouts/partials/extend-footer.html
@@ -1,1 +1,2 @@
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script src="/vendor/juxtapose/js/juxtapose.min.js"></script>
